Added planning script

--- a/package.xml
+++ b/package.xml
@@ -12,8 +12,10 @@
   <author>Yoshua Nava</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  
+
   <build_depend>moveit_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>yumi_hw</build_depend>
   <build_depend>moveit_core</build_depend>
@@ -22,10 +24,12 @@
   <build_depend>moveit_ros_planning</build_depend>
   <run_depend>moveit_msgs</run_depend>
   <run_depend>moveit_core</run_depend>
+  <run_depend>trajectory_msgs</run_depend>
   <run_depend>moveit_ros_planning</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>yumi_hw</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>message_runtime</run_depend>
 
 </package>
