--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
 <package>
   <name>yumi_demos</name>
-  <version>0.1.0</version>
+  <version>1.0.0</version>
   <description>YuMi test controllers</description>
 
 
   <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>
+  <maintainer email="hkarao@kth.se">Hakan Karaoguz</maintainer>
 
   <license>BSD</license>
-
-  <author>Yoshua Nava</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
